# IDOS-PPP

./: .gitignore  CITATION  LICENSE  README.md  environment.yml  pyproject.toml
bld/analysis/: continent_mean.pkl  continent_statistics.csv  yearly_continent_correlations.arrow  yearly_correlations.arrow
bld/data/: clean_data.csv  merged_data.pkl
bld/data/data_continents/: continents-according-to-our-world-in-data.metadata.json  readme.md
src/idos_ppp/: _version.py  config.py  parameters.py
src/idos_ppp/analysis/: idos_dataanalysis.py  idos_trends.py  task_analysis.py
src/idos_ppp/data/: Data_2007_2010_2013_2016_2019.xlsx
src/idos_ppp/data/original_data/: 241107 Komposition Draft.xlsx  3-2 WB Gov - Voice and accountability - NEW.xlsx  3-2 WB Gov - Voice and accountability - RAVI MATTHEWS.xlsx  Data First Task 2007 2010 2013 2016 250130.xlsx  Data First Task 2007 2010 2013 2016 250212.xlsx
src/idos_ppp/data/original_data/DATA/1-1/: FFP.xlsx  WEF_GCI_GCI4_A_01.csv
src/idos_ppp/data/original_data/DATA/1-2/: 1-2 UCDP data on fatalities in civil wars.xlsx  BattleDeaths_v25_1.csv  NonState_v25_1.csv
src/idos_ppp/data/original_data/DATA/1-3/: 1-3 WEF GCI Subpillar 5. Security.xlsx
src/idos_ppp/data/original_data/DATA/1-4/: PTS-2024.csv  PTS-2024.xlsx
src/idos_ppp/data/original_data/DATA/1-5/: FFP.xlsx
src/idos_ppp/data/original_data/DATA/2-1-1/: WEF GCI 2nd pillar.xlsx  WEF_GCIHH_GCI_A_02.csv
src/idos_ppp/data/original_data/DATA/2-1-2/: 2-1-2 UN- TII.xlsx
src/idos_ppp/data/original_data/DATA/2-2-1/: 2-2-1_Government_expenditure_ed_GDP.xlsx
src/idos_ppp/data/original_data/DATA/2-2-1/API_SE.XPD.TOTL.GD.ZS_DS2_en_csv_v2_127303/: Government_expenditure_on_primary_and_secondary_education_total_%_of_GDP.csv  SDG_COUNTRY.csv  SDG_LABEL.csv  SDG_README_RELEASE_2025_February.md  SDG_REGION.csv
src/idos_ppp/data/original_data/DATA/2-2-2/: WEF GCI Skills of Future Workforce.xlsx  WEF_GCI_EOSQ498.csv  WEF_GCI_FUTURWORKEDUQUALITY.csv  WEF_GCI_PUPTEACHRATIO1.csv
src/idos_ppp/data/original_data/DATA/2-7-1/: WEF GCI Subpillar- 1. Property rights.xlsx  WEF_GCIHH_GCI_A_01_01_01.csv
src/idos_ppp/data/original_data/DATA/2-7-2/: WEF GCI Subpillar- 2. Ethics and corruption and 3. Undue Influence.xlsx  WEF_GCIHH_GCI_A_01_01_02.csv  WEF_GCIHH_GCI_A_01_01_03.csv  WEF_GCI_GCI4_A_01_05.csv
src/idos_ppp/data/original_data/DATA/2-8-1/: 2_8_1 Domestic market competition.xlsx  WEF_GCIHH_GCI_B_06_01_01.csv
src/idos_ppp/data/original_data/DATA/2-8-2/: 2_8_2 Public-sector performance.xlsx  WB_GTMI_GT2.csv  WEF_GCIHH_EOSQ040.csv  WEF_GCIHH_EOSQ048.csv  WEF_GCIHH_GCI_A_01_01.csv
src/idos_ppp/data/original_data/some old correlations/: all results 231112.xlsx  do file regression indices.docx
src/idos_ppp/data_management/: idos_datamanagement.py  idos_merge.py  idos_unzip.py  task_data_management.py  try.ipynb
src/idos_ppp/final/: idos_plot.py  task_plot.py
tests/analysis/: test_analysis.py  test_trends.py
tests/data_management/: test_datamanagement.py
tests/final/: no_test_plot.py  test_plot.py
