# ======================================================================================
# Project metadata
# ======================================================================================

[project]
name = "idos_ppp"
description = "Final project for the course Effective Programming Practices for Economists: reproducible research project for the MENA Team (IDOS)"
requires-python = ">=3.11"
dynamic = ["version"]
keywords = [
    "Reproducible Research",
    "Economics",
    "Social Protection",
    "Inclusive Growth"
]
classifiers = [
    "Intended Audience :: Science/Research",
    # "License :: OSI Approved :: IDOS (German Institute of Development and Sustainability) License",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
authors = [
    { name = "Sergei Molinari", email = "s73smoli@uni-bonn.de" },
]
maintainers = [
    { name = "Sergei Molinari", email = "s73smoli@uni-bonn.de" },
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "IDOS (German Institute of Development and Sustainability)"

[project.urls]
Changelog = "https://github.com/sergeimolinari/IDOS-PPP"
Documentation = "https://github.com/sergeimolinari/IDOS-PPP"
Github = "https://github.com/sergeimolinari/IDOS-PPP"
Tracker = "https://github.com/sergeimolinari/IDOS-PPP/issues"

# ======================================================================================
# Build system configuration
# ======================================================================================

[build-system]
requires = ["hatchling", "hatch_vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.vcs]
version-file = "src/idos_ppp/_version.py"

[tool.hatch.build.targets.sdist]
exclude = ["tests"]
only-packages = true

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

# ======================================================================================
# Pytask configuration
# ======================================================================================

[tool.pytask.ini_options]
paths = ["./src/idos_ppp", "./documents"]
pdbcls = "pdbp:Pdb"

# ======================================================================================
# Ruff configuration
# ======================================================================================

[tool.ruff]
target-version = "py312"
fix = true
line-length = 88  # or any other value that suits your needs

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = [
    # "ANN",  # Missing type annotations
    # "COM812", # Conflict with ruff-format
    # "D10",  # Missing docstrings
    "ISC001", # Conflict with ruff-format
    "PD901", # df is a great name with functional data management
    # "PLR0913",  # Too many arguments in function definition
    # "RET504", # Don't force to calculate upon return
    "S101",  # Use of `assert` detected.
    "S301",  # pickle module is unsafe
    "SIM108", # version tuple
    "E501", # Line too long
    "ERA001", # Use of `assert` detected
    "D100", # Missing docstring in public module
    "W291", # Trailing whitespace
    "PT011", # Use of `assert` detected
    "PTH109", # Use of `assert` detected
    "T201", # Use of `assert` detected
    "F811", # Redefining name from outer scope
    "BLE001", # Use of `assert` detected
    "ANN201", # Missing return type annotation for function
    "ANN202", # Missing return type annotation for function
    "D103", # Missing docstring in public method
    "ANN001", # Missing type annotation for function
    "PD011", # Use of `assert` detected
    "E402", # Module level import not at top of file
    "D417", # Missing argument descriptions
    "EM101", # Exception must not use a string literal
    "TRY003", # Avoid specifying long messages outside the exception class
    "SIM118", # Use of `assert` detected
    "PERF401", # Use a list comprehension to create a transformed list
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "PD011"]
"task_*.py" = ["ANN", "ARG001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# ======================================================================================
# Miscellaneous tools configuration
# ======================================================================================


[tool.pytest.ini_options]
addopts = "--pdbcls=pdbp:Pdb"
filterwarnings = []
markers = [
    "wip: Tests that are work-in-progress.",
    "unit: Flag for unit tests which target mainly a single function.",
    "integration: Flag for integration tests which may comprise of multiple unit tests.",
    "end_to_end: Flag for tests that cover the whole program.",
]
norecursedirs = ["docs"]


[tool.yamlfix]
line_length = 88
none_representation = "null"


[tool.codespell]
skip = "*.ipynb,inst/WORDLIST"
